--- a/kk-observer/src/main/AndroidManifest.xml
+++ b/kk-observer/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 
     package="cn.kkmofang.observer">
 
-    <application android:allowBackup="true" android:label="@string/app_name"
+    <application
         android:supportsRtl="true">
 
     </application>
